--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,19 @@
-<div class="grid h-screen place-items-center">
-  <div class="font-bold text-3xl">
-    Fyle Internship Challenge
+<div>
+  <app-input (userSubmitted)="getUserData($event)"></app-input>
+
+  <div class="mt-4">
+    <div
+      *ngIf="userInfo"
+      class="p-6 max-w-md mx-auto bg-white shadow-lg rounded-lg"
+    >
+      <h2 class="text-2xl font-semibold mb-4">
+        {{ userInfo.login }}'s Repositories
+      </h2>
+      <ul>
+        <li *ngFor="let repo of userRepo" class="text-gray-700">
+          {{ repo.name }}
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
