--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,19 @@
     border-radius: 5px;
 }
 
-.min-h-12rem {
-    min-height: 12rem;
+.sticky-form {
+    position: sticky;
+    top: 0px;
+}
+
+@media (max-width: 768px) {
+
+    .br-sm {
+        border-radius: 0.5rem;
+    }
+
+    .sticky-form {
+        position: unset;
+    }
+
 }
