--- a/src/app/repo-section/repo-section.component.scss
+++ b/src/app/repo-section/repo-section.component.scss
@@ -1,5 +1,5 @@
 .topic {
-  background-color: gray;
+  background-color: rgb(28, 77, 238);
   padding: 6px;
   color: white;
   border-radius: 5px;
@@ -7,4 +7,7 @@
 
 .min-h-12rem {
   min-height: 12rem;
+}
+.non-selectable {
+  user-select: none;
 }
