--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <div *ngIf="!userInfo" class="flex justify-center items-center h-screen">
     <div class="p-6 max-w-md bg-white shadow-lg rounded-lg w-100">
-      <h2 class="text-2xl font-semibold mb-4">Let's Get Started! </h2>
+      <h2 class="text-2xl title font-semibold mb-4">Let's Get Started! </h2>
 
       <form (ngSubmit)="getUserData(githubUsername)" class="mb-4">
 
