--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap items-start">
     <div class="w-full flex justify-center md:w-1/4 mb-4 md:mb-0 text-center md:text-left">
-        <img [src]="userInfo.avatar_url" alt="User Avatar"
+        <img [src]="userInfo?.avatar_url" alt="User Avatar"
             class="w-32 h-32 md:w-40 md:h-40 rounded-full mb-2 md:mb-0 md:mr-4" />
     </div>
 
@@ -19,7 +19,7 @@
                     d="M22,7.24a1,1,0,0,0-.29-.71L17.47,2.29A1,1,0,0,0,16.76,2a1,1,0,0,0-.71.29L13.22,5.12h0L2.29,16.05a1,1,0,0,0-.29.71V21a1,1,0,0,0,1,1H7.24A1,1,0,0,0,8,21.71L18.87,10.78h0L21.71,8a1.19,1.19,0,0,0,.22-.33,1,1,0,0,0,0-.24.7.7,0,0,0,0-.14ZM6.83,20H4V17.17l9.93-9.93,2.83,2.83ZM18.17,8.66,15.34,5.83l1.42-1.41,2.82,2.82Z">
                 </path>
             </svg>
-            <span class="ml-2"> {{ userInfo.bio || '-' }} </span>
+            <span class="ml-2 user-bio"> {{ userInfo?.bio || '-' }} </span>
         </p>
 
         <p class="text-gray-600 flex items-center mb-2">
@@ -28,7 +28,7 @@
                     d="M12,2a8,8,0,0,0-8,8c0,5.4,7.05,11.5,7.35,11.76a1,1,0,0,0,1.3,0C13,21.5,20,15.4,20,10A8,8,0,0,0,12,2Zm0,17.65c-2.13-2-6-6.31-6-9.65a6,6,0,0,1,12,0C18,13.34,14.13,17.66,12,19.65ZM12,6a4,4,0,1,0,4,4A4,4,0,0,0,12,6Zm0,6a2,2,0,1,1,2-2A2,2,0,0,1,12,12Z">
                 </path>
             </svg>
-            <span class="ml-2">{{ userInfo.location || '-' }} </span>
+            <span class="ml-2 user-location">{{ userInfo?.location || '-' }} </span>
         </p>
 
         <div class="flex items-center">
@@ -38,8 +38,8 @@
                 </path>
             </svg>
             <span>&nbsp;</span>
-            <a [href]="userInfo.blog" target="_blank" class="text-blue-500 hover:underline">
-                {{ userInfo.blog || "-" }}</a>
+            <a [href]="userInfo.blog" target="_blank" class="text-blue-500 user-blog hover:underline">
+                {{ userInfo?.blog || "-" }}</a>
         </div>
     </div>
 </div>
